# spatter-analysis-ml

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
experiments/: data.yaml
notebooks/: 01_eda_and_data_preparation.ipynb  02_yolo_segmentation.ipynb  03_physics_vs_data_driven_comparison.ipynb  04_segformer.ipynb  04_vit_segmentation.ipynb  05_data_analysis_and_feature_engineering.ipynb  06_build2_physics_vs_data_driven_updated.ipynb  learning_curves_build2.csv  learning_curves_build2_full.csv  model_comparison_metrics.csv  visualization.ipynb
notebooks/experiments/: exp_01_yolo_v11.ipynb  exp_02_vit_segmentation_quick.ipynb  exp_05_benchmark_etl.ipynb  exp_06_benchmark_vectorization.ipynb
runs/segment/yolo_v11/: args.yaml
runs/segment/yolo_v112/: args.yaml
runs/segment/yolo_v113/: args.yaml
runs/segment/yolo_v114/: args.yaml
runs/segment/yolo_v115/: args.yaml
runs/segment/yolo_v116/: args.yaml
runs/segment/yolo_v117/: args.yaml
src/: hdf5_viewer.py
src/datasets/: export_to_yolo_data.py  peregrine.py
src/training/: train.py
src/utils/: __init__.py  build_features.py  extract_anomaly_samples.py  feature_engineering.py  part_anomaly.py  yolo_segment.py
tests/: test_yolo_segmentation.py
