[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piml-in-metal-am"
version = "0.1.0"
description = "Physics Informed Machine Learning for Metal Additive Manufacturing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Brighton Nkomo", email = "vnbrighton@gmail.com" }
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "h5py>=3.10.0",
    "matplotlib>=3.8.0",
    "transformers[torch]>=4.41.0",
    "accelerate>=0.28.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "opencv-python>=4.5.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "huggingface_hub>=0.15.1",
    "python-dotenv>=1.0.0",
    "ttkbootstrap>=1.12.0",
    "mlflow>=2.21.2",
    "dvc[all]>=3.59.0",
    "tables>=3.8.0",
    "plotly>=5.20.0",
    "statsmodels>=0.14.0",
    "xgboost>=2.0.0",
    "shap>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-retry",
    "pytest-xdist",
    "ruff",
]
test = ["pytest", "pytest-asyncio", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]

[tool.ruff]
src = ["src"]
extend-include = ["*.ipynb"]
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "SIM", # flake8-simplify
    "B",   # flake8-bugbear
    "UP",  # pyupgrade,
    "D",   # flake8-docstrings
]
lint.ignore = [
    "B008", # do not perform function calls in argument defaults
    "D202", # No blank lines allowed after function docstring
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D401", # First line should be in imperative mood
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
]
